clusters/talos-cluster/plex/namespace.yaml
# Create a namespace for the Plex Helm chart
apiVersion: v1
kind: Namespace
metadata:
  name: plex
  labels:
    name: plex
