clusters/talos-cluster/plex/plex-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex-service
  namespace: plex
spec:
  selector:
    app: plex-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
